<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    >

    <ImageButton
        android:id="@+id/ClickMeButton"
        android:layout_width="202dp"
        android:layout_height="88dp"
        android:contentDescription="@string/click_me_button"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HelloImage"
        app:srcCompat="@drawable/button"
        tools:ignore="ImageContrastCheck"
        tools:visibility="visible"
        android:onClick="hello_goodbye"/>

    <TextView
        android:id="@+id/ClickMeText"
        android:layout_width="74dp"
        android:layout_height="22dp"
        android:text="@string/click_me_text"
        android:textColor="#263238"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ClickMeButton"
        app:layout_constraintEnd_toEndOf="@+id/ClickMeButton"
        app:layout_constraintStart_toStartOf="@+id/ClickMeButton"
        app:layout_constraintTop_toTopOf="@+id/ClickMeButton" />

    <TextView
        android:id="@+id/HelloText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/hello_text_description"
        android:text="@string/hello_text"
        android:textColor="#B629BF"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/HelloImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/GoodbyeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/goodbye_text"
        android:text="@string/goodbye_text"
        android:textColor="#B629BF"
        android:textSize="48sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/GoodbyeImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/HelloImage"
        android:layout_width="353dp"
        android:layout_height="425dp"
        android:adjustViewBounds="true"
        android:alpha="0.50"
        android:backgroundTint="#6C6767"
        android:contentDescription="@string/hello_image_description"
        android:cropToPadding="true"
        android:scaleType="fitXY"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/ClickMeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HelloText"
        app:layout_constraintVertical_bias="0.419"
        app:srcCompat="@drawable/hello"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/GoodbyeImage"
        android:layout_width="353dp"
        android:layout_height="425dp"
        android:adjustViewBounds="true"
        android:alpha="0.50"
        android:backgroundTint="#6C6767"
        android:contentDescription="@string/goodbye_image_description"
        android:cropToPadding="true"
        android:scaleType="fitXY"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/ClickMeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GoodbyeText"
        app:layout_constraintVertical_bias="0.419"
        app:srcCompat="@drawable/goodbye"
        tools:ignore="ImageContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>